# Solana-basic-projects

./: .gitattributes
core-nft/: .env  Anchor.toml
core-nft/tests/: core-nft.ts  mint.ts
crypto-bot/: .gitignore  README.md  crypto-bot.code-workspace  package-lock.json  package.json
crypto-bot/frontend/: package-lock.json  package.json  tailwind.config.js
crypto-bot/langchain/: package.json
crypto-bot/src/: get-token-from-llm.ts  get-tweets.ts  index.ts  resp.json  swap.ts
monad-price-feed/: README.md
proj-1-favorites/: Anchor.toml  Cargo.toml
proj-1-favorites/tests/: proj-1-favorites.ts
proj-10-lending/: Anchor.toml
proj-10-lending/tests/: proj-10-lending.ts
proj-11-programmable-money/program/: Anchor.toml  package-lock.json
proj-2-voting-dapp/: Anchor.toml
proj-2-voting-dapp-blinks/: Anchor.toml  package-lock.json  package.json
proj-2-voting-dapp-blinks/programs/proj-2-voting-dapp-blinks/: Cargo.toml
proj-2-voting-dapp-blinks/programs/proj-2-voting-dapp-blinks/src/: lib.rs
proj-2-voting-dapp-blinks/tests/: proj-2-voting-dapp-blinks.ts
proj-2-voting-dapp/tests/: proj-2-voting-dapp.ts
proj-4-CRUD-dapp/: .gitignore  README.md  package-lock.json  package.json
proj-4-CRUD-dapp/anchor/: Anchor.toml
proj-4-CRUD-dapp/test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-12500-13ay3LGnxneP8PPtQzpcCtmBmW5nFxY26MGU5bNJEQrf.tar.zst  validator-keypair.json  (+3 more)
solana-sniper-1/: config.py  main.py  requirements.txt  token_detector.py  trading_system.py
tests/: escrow-class.ts
token-lottery/: README.md  package-lock.json  package.json
(+64 files in other folders)
