[workspace]
members = [
    "programs/proj-1-favorites"
, "programs/proj-2-voting-application"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }

